- New: Add option to send all emails sent to a bulk carbon copy.
- New: Preview of emails sent by member module is shown.
- New: task #10100 : Add button to create invoice from a subscription
- New: Reorganize tabs on third parties.
- New: Option MAIN_INVERT_SENDER_RECIPIENT is available in einstein pdf template.
- New: Easier way to define url for clicktodial module.
- Perf: Avoid reading database to determine country code after each
        page call.
- Fix: Better Postgresql compatibility.
- Fix: Box order is saved when moved.
- Fix: Database name can contains "-" characters.
- Fix: In coloring negative amounts.
- Fix: Date input use date format of user and not dd/mm/yyyy format.
- Fix: Fixed a very old bug making file attachment fails with some emails 
       readers when using "mail php function".


For translators:
- New: Update and complete slovenian language sl_SL.

For developers:
- New: Add jquery by default.
- New: Removed PWC libraries.
- New: Removed Scriptaculous libraries.
- New: Removed Prototype libraries.
- New: Add first Selenium GUI tests.
- New: Enhance a lot of internal function to build external modules
       more easily.
- Qual: Menu system code is simpler.
- Qual: Mutualize some duplicate code.
- Qual: Renamed some fields into database to be more internationnal.
- Qual: Removed deprecated code.


***** ChangeLog for 2.9 compared to 2.8 *****

For users:
- New: POS module allow to choose which warehouse to use.
- New: Support "Department/State" field on company setup, contact, 
       bank account and members card.
- New: Can reopen a refused/canceled supplier order.
- New: Add Gant diagramm on project module.
- New: Add a new mode for automatic stock increase: Can be increased
       on dispatching of products from a supplier order receipt.
- New: Can set a past delay to limit calendar export.
- New: Can attach files on emailing campaigns.
- New: Add statistics on trips and expenses module.
- New: Can reopen a closed customer order.